iFeature Changelog

****************************
Version 2.1.2 (11-02-11)
-Added Romanian language support.
-Removed "default" label from Lucida Grande in font selection dropdown, added it to Arial instead. 

Version 2.1.1 (10-25-11)
-Fixed syntax error in search.php
-Removed unecessary PHP closing tags from RSS icon code.
-Removed unecessary esc_url from email icon. 
-Fixed syntax error in archive.php.
-Fixed missing text domain in comments.php.
-Fixed breadcrumb syntax error on page.php
-General HTML elements styling.
-Fixed broken jQuery call. 
-Fixed error in recent posts default widget where scheduled posts were displaying. 

Version 2.1 (10-18-11)
-Added localization support, includes ifeature.pot as well as Spanish and French .po/.mo files. 
-Changed default font family to Arial, Helvetica, serif. 
-URLs now sanitized using esc_url when necessary. 
-Removed outdated get_bloginfo('url') call from breadcrumb function. 
-Fixed several broken links in theme options page. 
-Updated theme description and tags in stylesheet. 

Version 2.0.9 (10-11-11)
-jQuery call now placed within a function that hooks into wp_enqueue_scripts. 
-E_STRICT fix in options.php, theme options validation now within a function.  
-Modified disable breadcrumb option. 
-Added missing image alt tags. 

Version 2.0.8 (10-1-11)
-Added breadcrumb links for single post, page, archive and search templates. 
-Added definition list title and text styles. 
-Added Flickr social icon. 
-Adjusted h tag styles. 

Version 2.0.7 (9-23-11)
-Added height:auto element to img.size-full class.
-Removed unnecessary trailing slash in JS script file paths in functions.php.
-Renamed sidebar_register function to ifeature_widgets_init.
-Removed various empty lines from template files. 
-Increased font size of site title. 

Version 2.0.6 (9-15-11)
-Register sidebars now placed in a function that hooks into widgets_init. 
-Added ID and description to the footer widgetized area. 